--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </section>
     </header>
 
-        <section id="portfolio example">
+        <section id="portfolio">
             <h1>Portfolio</h1>
             <div class="marketing-page">
                 <img src="images/portfolio-1.png" alt="Marketing page example" class="marketing-img">
