changes with flex wrap

--- a/index.html
+++ b/index.html
@@ -23,45 +23,44 @@
             <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and am excited to put all my skills to use!</p>
         </section>
     </header>
-
-        <section id="portfolio">
-            <h1>Portfolio</h1>
-            <div class="marketing-page">
-                <img src="images/portfolio-1.png" alt="Marketing page example" class="marketing-img">
+    <h1>Portfolio</h1>
+        <div class="portfolio">
+            <section class="project">
+                <img src="images/portfolio-1.png" alt="Marketing page example" class="project-img">
                 <h2>Marketing Page</h2>
                 <p>This project shows the front page of a marketing website meant for a specific business I'm interedtes in.</p>
-            </div>
+            </section>
 
-            <div class="search-page example">
-                <img src="images/portfolio-2.png" alt="Search page example" class="search-img">
+            <section class="project">
+                <img src="images/portfolio-2.png" alt="Search page example" class="project-img">
                 <h2>Search Page</h2>
                 <p>This project searches through a specific database to find information that the user is trying to look up.</p>
-            </div>   
+            </section>   
             
-            <div class="travel-app example">
-                <img src="images/portfolio-3.png" alt="Travel app example" class="travel-img">
+            <section class="project">
+                <img src="images/portfolio-3.png" alt="Travel app example" class="project-img">
                 <h2>Travel App</h2>
                 <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-            </div>
+            </section>
 
-            <div class="map-fav-spots example">
-                <img src="images/portfolio-4.png" alt="Map of spots" class="favorites-img">
+            <section class="project">
+                <img src="images/portfolio-4.png" alt="Map of spots" class="project-img">
                 <h2>Map of Favorite Spots</h2>
                 <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour. </p>
-            </div>
+            </section>
 
-            <div class="photo-gallery example">
-                <img src="images/portfolio-5.png" alt="Photo Gallery" class="photo-example">
+            <section class="project">
+                <img src="images/portfolio-5.png" alt="Photo Gallery" class="project-img">
                 <h2>Photo Gallery</h2>
                 <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-            </div>
+            </section>
 
-            <div class="Calculator example">
-                <img src="images/portfolio-6.png" alt="image of calculator" class="calculator-example">
+            <section class="project">
+                <img src="images/portfolio-6.png" alt="image of calculator" class="project-img">
                 <h2>Calculator</h2>
                 <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
-            </div>
-        </section>
+            </section>
+        </div>
 
      <section id="contact">
         <h2>CONTACT</h2>
