html validator changes

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <LI><a href="#contact">CONTACT</a></LI>
             </ul>
         </nav>
-        <section id="profile-info">
+        <div id="profile-info">
             <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and am excited to put all my skills to use!</p>
             <img src="images/responsive-layout-profile.png" alt="Student's picture" class="profile-image">
-        </section>
+        </div>
     </header>
     <h1 id="portfolio">Portfolio</h1>
         <div class="portfolio">
@@ -71,6 +71,7 @@
      <hr>
      <footer>
         <h2>Alexandra Escalona</h2>
+        <nav>
             <ul class="nav-footer">
                 <li class="to-top"> <a href="#profile-info">BACK TO TOP</a></li>
                 <li class="bigger-screen"><a href="#home">HOME</a></li>
@@ -80,3 +81,4 @@
         </nav>
     </footer>
 </body>
+</html>
